cilium_netpolicy_examples/cilium1/ CiliumNetworkPolicy18.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l3-egress-rule"
spec:
  endpointSelector:
    matchLabels:
      role: frontend
  egress:
  - toEndpoints:
    - matchLabels:
        role: backend

#The following example illustrates how to use a simple egress rule to allow
# communication to endpoints with the label role=backend from endpoints with the label role=frontend.
